further end of day updates

--- a/evaluation_lesson.ipynb
+++ b/evaluation_lesson.ipynb
@@ -19,9 +19,24 @@
     "\n",
     "Now that our outcomes are defined, we can weigh which outcomes are less desirable than others. Naturally, TP and TN are desirable, but if we had to choose between FP or FN, which is worse? It may depend on the scenario:\n",
     "\n",
-    "Scenarios:\n",
+    "Scenarios:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ##### Revolucion: good coffee, but expensive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cost of a false positive is higher than a false negative.\n",
     "\n",
-    "- Revolucion: good coffee, but expensive"
+    "Precision is the best metric to evaluate my prediction ability\n",
+    "- We want to be sure about our positive predictions (PPV)"
    ]
   },
   {
@@ -33,43 +48,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Taco cabana: bad coffee, but cheap"
+    "- ##### Taco cabana: bad coffee, but cheap"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- meeting with super important client"
+    "The cost of a false negative is higher than a false positive.\n",
+    "\n",
+    "Recall/Precision is the best metric to evaluate\n",
+    "- We want to make sure that everyone who wants a coffee gets a coffee even if that means we give coffee where it's not wanted."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if you buy coffee for everyone or just don't buy any coffee?"
+    "- ##### meeting with super important client"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cost of FP? Client doesn't drink the coffee.  Maybe I'm out $5.\n",
+    "Cost of FN? Client throws papers in my face. Storms out in anger. Deal fails.\n",
+    "\n",
+    "Recall is the best metric."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What if you buy coffee for everyone or just don't buy any coffee?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This describes a baseline model."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,17 +98,20 @@
    "source": [
     "### Mini Exercise\n",
     "\n",
-    "Scenario: Build a classifier to predict whether a given face should unlock the iPhone.\n",
+    "##### Scenario: Build a classifier to predict whether a given face should unlock the iPhone.\n",
     "\n",
     "- What is the positive and negative case?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Scenarios:\n",
+    "\n",
+    "- Positive: Face unlocks a phone.\n",
+    "- Negative: Face does not unlock a phone."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,11 +121,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Outcomes:\n",
+    "\n",
+    "- FP: A face unlocks a phone when it should not unlock.\n",
+    "- FN: A face does not unlock a phone when it should.\n",
+    "- TP: A face unlocks a phone when it should.\n",
+    "- TN: A face does not unlock a phone when it should not unlock it."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,11 +140,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cost of FP is very high, loss of security.  Cost of FN is low, user frustration. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,27 +154,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We should use precision as the cost to our security would be too high."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scenario: Predict whether an email is spam or not. Emails marked as spam skip the inbox and go to the spam folder.\n",
+    "##### Scenario: Predict whether an email is spam or not. Emails marked as spam skip the inbox and go to the spam folder.\n",
     "\n",
     "- What is the positive and negative case?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Scenarios:\n",
+    "\n",
+    "- Positive: Spam email skips the inbox and goes to the spam folder.\n",
+    "- Negative: Spam email does not skip the inbox and stays in the inbox for the user to read."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,11 +187,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Outcomes:\n",
+    "\n",
+    "- FP: An email is marked as spam and goes to spam folder when it should not.\n",
+    "- FN: An email is not marked as spam and goes to the inbox when it should not; it should be marked as spam.\n",
+    "- TP: An email is marked as spam and goes to spam folder when it should.\n",
+    "- TN: An email is not marked as spam and goes to the inbox when it should."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,11 +206,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cost of fp is very bad, dangerous, loss of information for the customer.  Cost of fn is annoyance to the user having spam in the inbox."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,27 +220,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We should use precision as the cost to losing an email is very bad."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scenario: Predict whether an email is a phishing attempt. When we predict positive, show an additional banner warning the user that this might be a phishing email.\n",
+    "##### Scenario: Predict whether an email is a phishing attempt. When we predict positive, show an additional banner warning the user that this might be a phishing email.\n",
     "\n",
     "- What is the positive and negative case?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Scenarios:\n",
+    "\n",
+    "- Positive: Phishing email is detected and banner shown to user warning about phishing.\n",
+    "- Negative: Phishing email is not detected and no banner shown."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,11 +253,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Outcomes:\n",
+    "\n",
+    "- FP: A phishing email is detected and a banner shown to user warning about phishing, but the email is in fact not phishing.\n",
+    "- FN: A phishing email is not detected and no banner warning is shown, but the email IS in fact phishing.\n",
+    "- TP: A phishing email is detected and a banner shown to user warning about phishing, and the email is in fact truly phishing.\n",
+    "- TN: A phishing email is not detected and no banner warning is shown, and the email IS in fact not phishing."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,11 +272,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cost of FP is annoyance from user, being wary about email sent to them.  Cost of a FN is possibility someone gets scammed or has their data phished."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,11 +286,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I suggest using an F1 score as both can be dangerous to the end user. Using a recall metric is also acceptable as cost of FN is pretty high."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +386,7 @@
        "7     coffee  no coffee"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +465,7 @@
        "no coffee        2          2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +515,7 @@
        "Name: actual, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +656,7 @@
        "0.625"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +677,7 @@
        "0.625"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +709,7 @@
        "0.75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +745,7 @@
        "0.6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +791,7 @@
        "0.625"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +826,7 @@
        "1.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +908,7 @@
     "- optimize for **precision** when you want to be sure about your positive predictions\n",
     "- optimize for **recall** when you don't want to miss positive cases\n",
     "- baseline model predicts the most common class (not necessarily the postive class)\n",
-    "- + / - are somewhat arbitrary, but generally a postive prediction means taking action"
+    "- \\+ / - are somewhat arbitrary, but generally a postive prediction means taking action"
    ]
   }
  ],
@@ -883,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
